engine-net-2/examples/Errors/FunctionUnknown.grs
new graph "Rules.grg"

exec { d:double=ff() }

quit
